OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/eventing-e2e4/networking.istio.io/serviceentries/kafka-cluster.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1alpha3","kind":"ServiceEntry","metadata":{"annotations":{},"name":"kafka-cluster","namespace":"eventing-e2e4"},"spec":{"exportTo":["."],"hosts":["my-cluster-kafka-bootstrap.kafka"],"location":"MESH_EXTERNAL","ports":[{"name":"tcp-plain","number":9092,"protocol":"TCP"},{"name":"tls","number":9093,"protocol":"TCP"},{"name":"saslssl","number":9094,"protocol":"TCP"},{"name":"saslplain","number":9095,"protocol":"TCP"},{"name":"sslnoauth","number":9096,"proto [...]
  creationTimestamp: "2025-01-09T14:47:24Z"
  generation: 1
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:exportTo: {}
        f:hosts: {}
        f:location: {}
        f:ports: {}
        f:resolution: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-01-09T14:47:24Z"
  name: kafka-cluster
  namespace: eventing-e2e4
  resourceVersion: "44178"
  uid: 8c61a7ac-99e7-466d-baf0-d3f08d85755c
spec:
  exportTo:
  - .
  hosts:
  - my-cluster-kafka-bootstrap.kafka
  location: MESH_EXTERNAL
  ports:
  - name: tcp-plain
    number: 9092
    protocol: TCP
  - name: tls
    number: 9093
    protocol: TCP
  - name: saslssl
    number: 9094
    protocol: TCP
  - name: saslplain
    number: 9095
    protocol: TCP
  - name: sslnoauth
    number: 9096
    protocol: TCP
  resolution: NONE
